--- a/src/main/resources/com/bmazurkiewicz01/jchess/view/main.fxml
+++ b/src/main/resources/com/bmazurkiewicz01/jchess/view/main.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.bmazurkiewicz01.jchess.controller.MainController">
+    <Pane fx:id="board">
 
-<GridPane alignment="CENTER" vgap="5" hgap="5" xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.bmazurkiewicz01.jchess.controller.MainController">
-
-</GridPane>
+    </Pane>
+</AnchorPane>
