--- a/src/main/resources/com/bmazurkiewicz01/jchess/view/main.fxml
+++ b/src/main/resources/com/bmazurkiewicz01/jchess/view/main.fxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.layout.GridPane?>
+<GridPane xmlns:fx="http://javafx.com/fxml"
+          fx:controller="com.bmazurkiewicz01.jchess.controller.MainController"
+          fx:id="gridPane" gridLinesVisible="true">
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.bmazurkiewicz01.jchess.controller.MainController">
-    <Pane fx:id="board">
-
-    </Pane>
-</AnchorPane>
+</GridPane>
